# tankrs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yaml
nix/: tankrs.nix
src/: bullets.rs  inputs.rs  main.rs  tank.rs  ui.rs  utils.rs
src/ui/: battle.rs  mod.rs  shop.rs  startmenu.rs
src/ui/utils/: black_background.rs  mod.rs
