[package]
name = "tankrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_lib"
path = "src/lib.rs"
required-features = ["bevy_xpbd_3d"]

[dependencies]
#oxiced = "0.1.0"
oxiced = { branch = "new-try", git = "https://github.com/Xetibo/oxiced.git" }
bevy = { version = "0.15", features = ["wayland"] }
rand = "0.8.5"
bevy_iced = { branch = "master", git = "https://github.com/Azorlogh/bevy_iced.git" }
enum-iterator = "2.1.0"
